PLANET-7756: Navigation Menu: fix accessibility issues on mobile
- Fix: I wonder if there is any reason the focus ring is another shade of blue in the hamburger menu?

--- a/assets/src/scss/layout/navbar/_burger-menu.scss
+++ b/assets/src/scss/layout/navbar/_burger-menu.scss
@@ -208,6 +208,12 @@ $transition-duration: .2s;
       transform: rotate(90deg);
     }
   }
+
+  &:focus,
+  &:focus-within,
+  &:focus-visible {
+    @include focus-styles;
+  }
 }
 
 .nav-menu-close {
